syntax = "proto3";

package messenger;

service MessengerService {
  rpc SendMessage (MessageRequest) returns (SendResponse);
  rpc ReceiveMessages (ReceiveRequest) returns (stream MessageResponse);
  rpc Connect (ConnectRequest) returns (ConnectResponse);
  rpc Disconnect (DisconnectRequest) returns (Empty);
  rpc CreateChannel (CreateChannelRequest) returns (Empty);
  rpc SendChannelMessage (ChannelMessageRequest) returns (SendResponse);
  rpc ReceiveChannelMessages (ChannelReceiveRequest) returns (stream MessageResponse);
  rpc GetChannelStats(ChannelStatsRequest) returns (ChannelStatsResponse);
}

message MessageRequest {
  string from = 1;
  string to = 2;
  string content = 3;
  bool secret = 4;
}

message SendResponse {
  string status = 1;
}

message ReceiveRequest {
  string username = 1;
}

message MessageResponse {
  string from = 1;
  string to = 2;
  string content = 3;
  bool system = 4;
  bool secret = 5;
  bool delete = 6;
  repeated string tags = 7;
}

message ConnectRequest {
  string username = 1;
}

message ConnectResponse {
  repeated string users = 1;
}

message DisconnectRequest {
  string username = 1;
}

message Empty {}

message CreateChannelRequest {
  string creator = 1;
  string name = 2;
  repeated string tags = 3;
}

message ChannelMessageRequest {
  string from = 1;
  string channel_id = 2;
  string content = 3;
}

message ChannelReceiveRequest {
  string username = 1;
  string channel_id = 2;
}

message ChannelStatsRequest {
  string channel_id = 1;
}

message ChannelStatsResponse {
  int32 total_messages = 1;
}
